# cv

./: .gitignore  CMakeLists.txt  Dockerfile  db.sqlite  package-lock.json  package.json  runCrudExe.js
.github/workflows/: cmake-single-platform.yml  main.yml  main1.yml
sql/: db.sql
src/: App.cpp  AppComponent.hpp  DatabaseComponent.hpp  ErrorHandler.hpp  SwaggerComponent.hpp
src/controller/: EducationController.hpp  ExperienceController.hpp  Personal_infoController.hpp  SkillController.hpp  StaticController.hpp
src/db/: EducationDb.hpp  ExperienceDb.hpp  Personal_infoDb.hpp  SkillDb.hpp
src/dto/: EducationDto.hpp  ExperienceDto.hpp  PageDto.hpp  Personal_infoDto.hpp  SkillDto.hpp  StatusDto.hpp
src/service/: EducationService.cpp  EducationService.hpp  ExperienceService.cpp  ExperienceService.hpp  Personal_infoService.cpp  Personal_infoService.hpp  SkillService.cpp  SkillService.hpp
static/: index.html  page_1.html  script.js  styles.css
utility/: install-oatpp-modules.sh
